--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ nav h1, nav p {
 }
 
 .app-container .list-section {
-  height: 100vh;
+  height: calc(100vh - 50px);
   background-color: rgb(236, 236, 236);
 }
 
@@ -32,7 +32,6 @@ nav h1, nav p {
 }
 .list-section input {
   width: 90%;
-  padding: 5px;
   position: fixed;
 }
 
@@ -62,13 +61,22 @@ nav h1, nav p {
 }
 
 @media only screen and (min-width:600px) {
+  .app-container {
+    height: calc(100vh - 50px);
+  }
+  .list-section input {
+    width: 250px;
+  }
   .app-container .list-section {
     width: 275px;
     float: left;
     position: absolute;
   }
+  .map-section {
+    height: 100%;
+  }
   #map {
     margin-left: 275px;
-    height: 100vh;
+    height: 100%;
   }
 }
